# acetone

./: AUTHORS.md  README.md  __init__.py  environment.yml  implemented.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: Clean_actions.yml  ci-tests.yml
data/acas_decr128/: acas_decr128.h5  acas_decr128.json  output_keras.txt
data/lenet5_trained/: lenet5_trained.h5  lenet5_trained.json  output_keras.txt
debug_tools/: debug_keras.py  debug_onnx.py  debug_tools.py
examples/: debug_example.py  demo.ipynb  usage_example.py
src/: cli_acetone.py  cli_compare.py  eval_semantic_preservation.py  main.py
src/acetone-nnet/code_generator/: activation_functions.py
src/acetone-nnet/templates/: template_main_file.c.tpl  template_source_file.c.tpl
src/acetone_nnet/: __init__.py  __main__.py  cli_acetone.py  cli_compare.py
src/acetone_nnet/cli/: compare.py  generate.py
src/acetone_nnet/code_generator/: Layer.py  __init__.py  activation_functions.py  neural_network.py
src/acetone_nnet/debug/: __init__.py  debug_keras.py  debug_onnx.py  debug_tools.py
src/acetone_nnet/debug_tools/: __init__.py  debug_keras.py  debug_onnx.py  debug_tools.py
src/acetone_nnet/exporters/: __init__.py  exporter.py
src/acetone_nnet/format_importer/: __init__.py  parser.py
src/acetone_nnet/generator/: Layer.py  __init__.py  activation_functions.py  cuda.py  neural_network.py
src/acetone_nnet/graph/: __init__.py  graph_interpretor.py
src/acetone_nnet/importers/: parser.py
src/acetone_nnet/ir/: __init__.py  layer.py  operation.py  tensor.py
src/acetone_nnet/pattern_matching/: Pattern.py  PatternMatcher.py  __init__.py  pattern_matcher.py
src/acetone_nnet/quantize/: activation.py  qform.py
src/acetone_nnet/scheduler/: DSH.py  Gantt.py  Graph.py  ISH.py  README.md  __init__.py  main_scheduler.py
src/acetone_nnet/templates/: template_Makefile.tpl  template_global_var_file.c.tpl  template_header_file.c.tpl  template_main_file.c.tpl  template_makefile.py  template_makefile.tpl  template_parameter_file.c.tpl  template_source_file.c.tpl  template_test_dataset_header.c.tpl  template_train_hook_file.c.tpl
src/acetone_nnet/versioning/: default_implementations.py  layer_factories.py  versioning.py
src/code_generator/: Layer.py  Layers.py  __init__.py  activation_functions.py  layers.py  neural_network.py
src/format_importer/: parser.py
src/graph/: graph_interpretor.py
src/templates/: template_AddBiase.c.tpl  template_Conv_6loops.c.tpl  template_Dense.c.tpl  template_Input_Layer.c.tpl  template_Makefile.tpl  template_MatMul.c.tpl  template_Softmax.c.tpl  template_gemm_nt.c.tpl  template_gemm_tn.c.tpl  template_global_var_file.c.tpl  template_header_file.c.tpl  template_main_file.c.tpl  template_normalization_cst_in_global_var_file.c.tpl  template_normalization_cst_in_header_file.c.tpl  template_post_processing.c.tpl  template_pre_processing.c.tpl  template_source_file.c.tpl  template_test_dataset_header.c.tpl  template_test_dataset_source.c.tpl
test/: acetoneTestCase.py  customTestCase.py  test_activation_layer.py  test_layer.py  test_semantic.py
test/example/: initial_setup.py
tests/: acetoneTestCase.py  common.py  run_tests.py  test_quantize.py
tests/check_installation/: check_installation.py
tests/examples/: debug_example.py  usage_example.py
tests/tests_importer/: importerTestCase.py
tests/tests_inference/: acetoneTestCase.py
tutorials/: README.md  tutorial0_installing_acetone.ipynb  tutorial1_introduction.ipynb  tutorial2_using_variants.ipynb  tutorial3_using_debug_mode.ipynb  tutorial4_new_variants.ipynb
tutorials/schedmcore_ACAS_CaseStudy/: README.md
(+720 files in other folders)
